
	* src/main.c (main): Removed restrictive validation on input URLs.
	Now allows any non-empty argument, including local files and custom
	schemes, ensuring the program functions as a transparent router.
	Added minimal check for empty string input.

	* src/main.c (main): Removed unnecessary debug statements
	printing the number of loaded rules and the selected command.

2024-12-13  Serghei Iakovlev  <gnu@serghei.pl>

    * configure.ac: Removed debug-mode and werror logic, as well as
      extraneous compiler flag checks. Simplified the script to rely on
      standard Autoconf macros and introduced AC_CONFIG_HEADERS([src/config.h]).
    * autogen.sh: Add '-I m4' to autoreconf invocation to ensure macros are found.
    * .github/workflows/ci-unix.yml, .github/workflows/ci-windows.yml (new):
      Added minimal CI workflows for Linux, macOS, and Windows to
      automatically build and test upon commits and pull requests.
    * src/config.h (new): Generated header for future conditional compilation.

2024-12-10  Serghei Iakovlev  <gnu@serghei.pl>

    Reorganize code into separate modules for better maintainability
    and clarity.

    * src/utils.c, src/utils.h (new): Utility functions moved here.
    * src/brogw_config.c, src/brogw_config.h (new): Configuration loading.
    * src/matcher.c, src/matcher.h (new): Pattern matching with regex.
    * src/executor.c, src/executor.h (new): Command execution.
    * src/main.c: Removed inline code for config loading, URL matching,
      and command execution. Now delegates to the above modules.

;; Local Variables:
;; coding: utf-8
;; End:

  Copyright (C) 2024 Free Software Foundation, Inc.

  This file is part of Brogw.

  Brogw is free software: you can redistribute it and/or modify it
  under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
